assets/sass/main.css
/* ... */
/* Styles for chapter two, by Dave */

.chap-2-img-container {
  text-align: center;
}

.chap-2-img-vertical {
  width: 50%;
  margin-bottom: 1%;
}

.chap-2-img-horizontal {
  width: 70%;
  margin-bottom: 2.5%;
}

.position-text {
  margin-bottom: 5.5%;}

.iframe-container{
  position: relative;
  width: 100%;
  padding-bottom: 56.25%; 
  height: 0;
}

.iframe-container iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Donate page styling */
#donate-container {
  padding: 0 !important;
  display: inline-block;
  display: flex; 
  flex-wrap: wrap-reverse; 
  background: url(/images/donate/donate-1.jpg) no-repeat local left center;
  background-size: cover;
}

.donate-top-section { 
  display: flex; 
  flex-wrap: wrap-reverse; 
  padding: 4em;
}

#progress-bar-section {
  background-color: white;

}
#progress-bar-section progress{
  width: 100%
}

.gathered-amount {
  font-size: 1.5em;

}
/*
#donate-container-2 {
  padding: 0 !important;
  background-color: #568fd1;
}

.donate-bot-section {
  display: flex; 
  padding: 4em;
  flex-direction: column;
  flex-wrap: wrap; 
  color: #ffffff;
  font-weight: 300;
}
*/

.donate-text h2 {
  color: #fafafa;
  font-size: 150% !important;
  font-weight: 650;
  padding-top: 150px !important;
}

.donate-text{
  color: white;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .donate-div {
    padding: 0px !important;
  }
} 

/* Medium devices (768px and down) */
@media only screen and (max-width: 768px) {
  .donate-text h2 {
    padding-left: 30px;
  }
} 

@media only screen and (min-width: 769px) {
  .donate-text h2 {
    padding-top: 250px !important;
  }
} 

/* Fundraisers page styling */
#fundraisers-main {
  font-weight: 500;
}

#fundraisers-header {
  text-align: center;
  position: relative;
  width: 100%;
  height: 42em;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  margin: 0 0 0 0;
}

#fundraising-title-text {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  text-align: center; 
  line-height: 1.5em;
  font-size: 50px;
  padding: 20px;
  margin: 15px;
  font-weight: 600; 
  color: white;
  z-index: 1;
}

@media screen and (max-width: 625px) {
  #fundraising-title-text {
    font-size: 2.5em;
  }
} 

@media screen and (max-width: 550px) {
  #fundraising-title-text {
    font-size: 2em;
  }
} 

@media screen and (max-width: 450px) {
  #fundraising-title-text {
    font-size: 1.5em;
  }
} 

@media screen and (max-width: 360px) {
  #fundraising-title-text {
    font-size: 1.2em;
  }
} 

.fundraising-title-video-container {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
}

.fundraisers {
  display: flex;
  background-size: cover;
  text-align: center;
  flex-wrap: wrap;
  height: 42em;
  overflow: hidden;
  
  margin: 0 0 0 0; } 
  .fundrasers.steps-origin {
    flex-direction: row;
  }
  .fundraisers.steps-reverse {
    flex-direction: row-reverse;
  }

.fundraisers-container {
  width: 45%; 
  display: flex;
  align-items: center;
}.fundraisers-container.origin{
  justify-content: flex-start;
}.fundraisers-container.reverse {
  justify-content: flex-end;
}
#absolute-pictures-tap {
  position: absolute;
  overflow: hidden;
  max-width: 30%;
  max-height: 50%;
  z-index: 2;
  left: -5%;
  margin-top: -20%;
}
#absolute-pictures-blue-garland {
  position: absolute;
  overflow: hidden;
  transform: rotate(30deg);
  max-width: 50%;
  max-height: 100%;
  z-index: 2;
  right: 0%;
}
#absolute-pictures-red-garland{
  position: absolute;
  overflow: hidden;
  transform: rotate(-35deg);
  max-width: 40%;
  max-height: 100%;
  left: 0%;
  margin-top: -10%;
  z-index: 2;
}
#absolute-pictures-baloon-1{
  position: absolute;
  overflow: hidden;
  transform: rotate(-10deg);
  left: 2%;
  margin-top: -15%;
  max-width: 27%;
  max-height: 100%;
  z-index: 2;
}
#absolute-pictures-baloon-2{
  position: absolute;
  overflow: hidden;
  transform: rotate(10deg);
  right: 2%;
  margin-top: -12%;
  max-width: 30%;
  max-height: 100%;
  z-index: 2;
}

.steps-image {
  width: 70%;
  align-self: center;}
.steps-image img {
  max-width: 70%;
  max-height: 70%;
}

.steps-text-container { 
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  flex-grow: 2;}
.fundraisers-steps-text {
  max-width: 80%;
  color: 	#fffafa;
}


  /* add z-component if screen small, to make writings stack on top of the image*/
  .fundraisers-steps-text h1 {
    padding: 0.2em;
    font-weight: 500;
    border-radius: 10px;
    font-size: 1.2em;
    line-height: 1.2em;
    margin-bottom: 0.2em;
    text-align: center;
    max-width: 150px;
  } 
  .fundraisers-steps-text h2 {
    padding: 0.2em;
    font-weight: 500;
    border-radius: 10px;
    font-size: 1.2em;
    line-height: 1.2em;
    margin-bottom: 0.4em;
    text-align: center;
    max-width: 150px;
    margin: auto;
    width: 50%;
  } 
  
  .fundraisers-steps-text header {
    font-weight: 550;
    font-size: 3em;
    line-height: 1.2em;
    margin-bottom: 0.2em;
    text-align: left;
  } 

  .fundraisers-steps-text p {
    font-weight: 500;
    font-size: 1.2em;
    line-height: 1.2em;
    max-width: 450px;
    text-align: left;
  } 
  
  @media screen and (max-width: 550px) {
    .fundraisers-steps-text header {
      font-size: 2em;
    }

    .fundraisers-steps-text p {
      font-size: 0.9em;
    }
  } 

  @media screen and (max-width: 370px) {
    .fundraisers-steps-text header {
      font-size: 1.6em;
    }

    .fundraisers-steps-text p {
      font-size: 0.6em;
    }
  } 
  
#fundraisers-footer {
  background: url(/images/fundraisers/test4.jpg) no-repeat local left center;
  background-size: cover;
  text-align: center;
  /*flex-wrap: wrap-reverse; */
  padding-top: 248px; 
  padding-bottom: 200px;
  margin: 0 auto;
}
/* ... */

